# syn-txt

./: .gitattributes  .gitignore  Cargo.toml  Makefile  README.md  ci.nix  default.nix  genindex.html  index.html  objects.inv  search.html  searchindex.js  shell.nix
_sources/: index.rst.txt
_static/: alabaster.css
demo/: index.html
doc/: default.nix  publish.sh
examples/: demo.rs  graphdemo.rs  graphsong.rs  lang.rs  song.rs  sox.rs  synth.rs
nix/: nixpkgs-mozilla.json  nixpkgs-pinned.nix  nixpkgs.json  nixpkgs.nix  overlay.nix  rust-analyzer.json  rust-analyzer.nix  rust-overlay.nix  sources.json  update.py
planning/: automation.md  idea.syn  primop-overhaul.md  resources.md  roadmap.md
src/: automation.rs  envelope.rs  graph.rs  instrument.rs  lib.rs  melody.rs  note.rs  oscillator.rs  pianoroll.rs  play.rs  rational.rs  song.rs  synth.rs  (+3 more)
syntxt-audio/: Cargo.toml
syntxt-audio/examples/: demo.rs  graphdemo.rs  graphsong.rs
syntxt-audio/src/: automation.rs  envelope.rs  graph.rs  instrument.rs  lib.rs  melody.rs  note.rs  oscillator.rs  play.rs  rational.rs  song.rs  tuning.rs  util.rs  wave.rs
syntxt-audio/src/filter/: biquad.rs  mod.rs
syntxt-audio/src/graph/: builder.rs  instrument.rs  sox.rs  transducers.rs
syntxt-audio/src/instrument/: polyphonic.rs  wavinator.rs
syntxt-lang/: Cargo.toml
syntxt-lang/examples/: syntxt-debug.rs
syntxt-lang/src/: ast.rs  eval.rs  lexer.rs  lib.rs  line_map.rs  parser.rs
syntxt-lang/src/parser/: expect_tests.rs
syntxt-web-wasm/: Cargo.toml  index.html  serve.py
syntxt-web-wasm/src/: console.rs  lib.rs
syntxt-web-wasm/src/components/: ast_view.rs  editor.rs  list.rs  mod.rs  song_view.rs  splitter.rs  tree.rs
syntxt-web-wasm/static/: style.css
syntxt-web-wasm/tests/: web.rs
(+84 files in other folders)
