[package]
name = "syntxt-web-wasm"
version = "0.1.0"
authors = ["Fabian Thorand <f.thorand@gmail.com>"]
edition = "2018"
license = "AGPL-3.0-only"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1.1"

syntxt-lang = { path = "../syntxt-lang" }

[dev-dependencies]
wasm-bindgen-test = "0.3.22"
