[package]
name = "syntxt-web-wasm"
version = "0.1.0"
authors = ["Fabian Thorand <f.thorand@gmail.com>"]
edition = "2018"
license = "AGPL-3.0-only"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# yew master fixes a few issues with rust-analyzer
yew = { git = "https://github.com/yewstack/yew" }
serde = "1.0.125"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
console_error_panic_hook = "0.1.1"

syntxt-lang = { path = "../syntxt-lang" }

[dev-dependencies]
wasm-bindgen-test = "0.3.22"
